@@ -51,8 +51,8 @@ module Kconv
   # call-seq:
   #    Kconv.kconv(str, to_enc, from_enc=nil)
   #
-  # Convert <code>str</code> to out_code.
-  # <code>out_code</code> and <code>in_code</code> are given as constants of Kconv.
+  # Convert <code>str</code> to <code>to_enc</code>.
+  # <code>to_enc</code> and <code>from_enc</code> are given as constants of Kconv or Encoding objects.
   def kconv(str, to_enc, from_enc=nil)
     opt = ''
     opt += ' --ic=' + from_enc.to_s if from_enc
@@ -199,10 +199,10 @@ class String
   # call-seq:
   #    String#kconv(to_enc, from_enc)
   #
-  # Convert <code>self</code> to out_code.
-  # <code>out_code</code> and <code>in_code</code> are given as constants of Kconv.
+  # Convert <code>self</code> to <code>to_enc</code>.
+  # <code>to_enc</code> and <code>from_enc</code> are given as constants of Kconv or Encoding objects.
   def kconv(to_enc, from_enc=nil)
-    form_enc = self.encoding if !from_enc && self.encoding != Encoding.list[0]
+    from_enc = self.encoding if !from_enc && self.encoding != Encoding.list[0]
     Kconv::kconv(self, to_enc, from_enc)
   end
 
