@@ -1,3 +1,8 @@
+Tue Dec  7 18:56:52 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* ext/nkf/lib/kconv.rb (String#kconv): fix typo and update rdoc.
+	  patched by Kouhei Yanagita [ruby-dev:42696]
+
 Tue Dec  7 00:27:14 2010  Masaya Tarui  <tarui@ruby-lnag.org>
 
 	* win32/win32.c (rb_w32_read): fixed more for readline,
